--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "inversify": "^5.0.1",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.0.3",
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
