feat(configs): make npm dev with NODE_ENV=development by default

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-app",
   "scripts": {
-    "dev": "next",
+    "dev": "env NODE_ENV=development next",
     "build": "next build",
     "build:static": "gulp --gulpfile ./semantic/gulpfile.js build",
     "start": "next start",
