--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "debug": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^0.5.0",
     "inversify": "^5.0.1",
+    "lodash": "^4.17.11",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
@@ -44,12 +45,13 @@
     "@types/axios": "^0.14.0",
     "@types/debug": "0.0.31",
     "@types/jest": "^23.3.10",
+    "@types/lodash": "^4.14.119",
     "@types/next": "^7.0.5",
     "@types/react": "^16.7.13",
-    "hygen": "^1.6.2",
     "commitlint": "^7.2.1",
     "cz-customizable": "^5.3.0",
     "husky": "^1.2.0",
+    "hygen": "^1.6.2",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "semantic-ui": "^2.4.2",
