--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,12 +63,10 @@
     "pages",
     "types",
     "utils",
-    "stores"
+    "stores",
+    "config"
   ],
   "exclude": [
     "utils/build"
-  ],
-  "references": [
-    { "path": "./config" }
   ]
 }
