feat(product): new project structure
Move all system files like providers, api, runtime-settings into new folder core

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,9 +64,9 @@
     "types",
     "utils",
     "stores",
-    "config"
+    "core/config"
   ],
   "exclude": [
-    "utils/build"
+    "core/build"
   ]
 }
