--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "axios": "^0.18.0",
     "class-transformer": "^0.2.0",
     "debug": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^0.5.0",
     "inversify": "^5.0.1",
     "lodash": "^4.17.11",
     "mobx": "^5.8.0",
@@ -38,10 +37,11 @@
     "react-dom": "^16.6.3",
     "reflect-metadata": "^0.1.12",
     "semantic-ui-react": "^0.83.0",
-    "ts-loader": "^5.3.1",
-    "tslint-react": "^3.6.0"
+    "ts-loader": "^5.3.1"
   },
   "devDependencies": {
+    "fork-ts-checker-webpack-plugin": "^0.5.0",
+    "tslint-react": "^3.6.0",
     "@types/axios": "^0.14.0",
     "@types/debug": "0.0.31",
     "@types/jest": "^23.3.10",
