--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/debug": "0.0.31",
+    "@types/faker": "^4.1.5",
     "@types/jest": "^23.3.10",
     "@types/lodash": "^4.14.119",
     "@types/next": "^7.0.5",
     "@types/react": "^16.7.13",
     "commitlint": "^7.2.1",
     "cz-customizable": "^5.3.0",
+    "faker": "^4.1.0",
     "husky": "^1.2.0",
     "hygen": "^1.6.2",
     "jest": "^23.6.0",
