--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/debug": "0.0.31",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/faker": "^4.1.5",
     "@types/jest": "^23.3.10",
     "@types/lodash": "^4.14.119",
@@ -53,6 +55,8 @@
     "@types/react": "^16.7.13",
     "commitlint": "^7.2.1",
     "cz-customizable": "^5.3.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
     "faker": "^4.1.0",
     "husky": "^1.2.0",
     "hygen": "^1.6.2",
