--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "class-transformer": "^0.2.0",
+    "classnames": "^2.2.6",
     "debug": "^4.1.0",
     "inversify": "^5.0.1",
     "lodash": "^4.17.11",
