feat(core): возможность гененрировать ts по свагеру
npm run swagger -- [url to swagger] создает в папке types файлик swagger.d.ts. Для использования
нужна java и bash

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:w": "jest --watch",
-    "test:c": "node ./core/tests/runners/coverage.js"
+    "test:c": "node ./core/tests/runners/coverage.js",
+    "swagger": "./core/build/genSwagger.sh"
   },
   "husky": {
     "hooks": {
