--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
+    "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.1",
     "webpack-bundle-analyzer": "^3.0.3"
