--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/lodash": "^4.14.120",
     "@types/next": "^7.0.8",
     "@types/react": "^16.8.2",
+    "autoprefixer": "^9.4.7",
     "commitlint": "^7.5.0",
     "cz-customizable": "^5.3.0",
     "enzyme": "^3.8.0",
