--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/next": "^7.0.8",
     "@types/react": "^16.8.2",
     "autoprefixer": "^9.4.7",
+    "clean-css": "^4.2.1",
     "commitlint": "^7.5.0",
     "cz-customizable": "^5.3.0",
     "enzyme": "^3.8.0",
@@ -64,8 +65,11 @@
     "husky": "^1.3.1",
     "hygen": "^2.1.1",
     "jest": "^23.6.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "lint-staged": "^8.1.3",
     "opn": "^5.4.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "semantic-ui": "^2.4.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
