--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "husky": "^1.3.1",
     "hygen": "^2.1.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
