--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     ]
   },
   "dependencies": {
-    "@types/classnames": "^2.2.7",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "class-transformer": "^0.2.0",
     "classnames": "^2.2.6",
     "debug": "^4.1.1",
+    "invariant": "^2.2.4",
     "inversify": "^5.0.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
+    "mobx-utils": "^5.2.0",
     "next": "^7.0.2",
+    "ramda": "^0.26.1",
     "react": "^16.8.1",
     "react-dom": "^16.7.0",
     "reflect-metadata": "^0.1.13",
@@ -52,14 +52,19 @@
     "ts-loader": "^5.3.3"
   },
   "devDependencies": {
+    "@types/ramda": "^0.26.3",
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.7",
     "@types/debug": "0.0.31",
     "@types/enzyme": "^3.1.16",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/faker": "^4.1.5",
+    "@types/invariant": "^2.2.29",
     "@types/jest": "^24.0.0",
     "@types/next": "^7.0.8",
     "@types/react": "^16.8.2",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^9.4.7",
     "clean-css": "^4.2.1",
     "commitlint": "^7.5.0",
