--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "next build",
     "build:static": "gulp --gulpfile ./semantic/gulpfile.js build",
     "start": "next start",
+    "analyze": "env NODE_ENV=production NODE_ANALYZE=1 next build",
     "lint": "(npm run lint:code & npm run lint:styles & wait)",
     "lint:code": "tslint --project ./tsconfig.json",
     "lint:styles": "stylelint './**/*.@(less|css)'",
@@ -36,10 +37,11 @@
     "axios": "^0.18.0",
     "class-transformer": "^0.2.0",
     "classnames": "^2.2.6",
+    "core-js": "^3.0.0-beta.16",
     "debug": "^4.1.1",
     "invariant": "^2.2.4",
     "inversify": "^5.0.1",
-    "mobx": "^5.9.0",
+    "mobx": "^4.9.3",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
     "mobx-utils": "^5.2.0",
