--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "inversify": "^5.0.1",
     "mobx": "^4.9.3",
     "mobx-react": "^5.4.3",
-    "mobx-react-devtools": "^6.0.3",
+    "mobx-react-devtools": "^6.1.1",
     "mobx-utils": "^5.2.0",
-    "next": "^7.0.2",
+    "next": "^8.0.3",
     "ramda": "^0.26.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "reflect-metadata": "^0.1.13",
     "semantic-ui-react": "^0.85.0",
     "ts-loader": "^5.3.3"
@@ -64,7 +64,8 @@
     "@types/invariant": "^2.2.29",
     "@types/jest": "^24.0.0",
     "@types/next": "^7.0.8",
-    "@types/react": "^16.8.2",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^9.4.7",
@@ -93,7 +94,7 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.1",
+    "typescript": "3.3.3333",
     "webpack-bundle-analyzer": "^3.0.3"
   },
   "config": {
