--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
 
     location / {
       proxy_connect_timeout   10;
-      # template - название сервиса в docker-compose.
+      # app - название сервиса в docker-compose.
       proxy_pass  http://app:3000;
     }
   }
