--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mobx": "^4.9.3",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.1.1",
+    "mobx-react-lite": "^1.2.0",
     "mobx-utils": "^5.2.0",
     "next": "^8.0.3",
     "ramda": "^0.26.1",
@@ -52,7 +53,6 @@
     "ts-loader": "^5.3.3"
   },
   "devDependencies": {
-    "@types/ramda": "^0.26.3",
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.7",
     "@types/debug": "0.0.31",
@@ -62,6 +62,7 @@
     "@types/invariant": "^2.2.29",
     "@types/jest": "^24.0.0",
     "@types/next": "^7.0.8",
+    "@types/ramda": "^0.26.3",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "@zeit/next-css": "^1.0.1",
@@ -69,6 +70,7 @@
     "autoprefixer": "^9.4.7",
     "clean-css": "^4.2.1",
     "commitlint": "^7.5.0",
+    "critters-webpack-plugin": "^2.3.0",
     "cz-customizable": "^5.3.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.0",
@@ -83,6 +85,7 @@
     "lint-staged": "^8.1.3",
     "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-standard": "^18.2.0",
@@ -91,7 +94,7 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "typescript": "3.3.3333",
+    "typescript": "3.4.2",
     "webpack-bundle-analyzer": "^3.0.3"
   },
   "config": {
