build(configs): установить зависимости
- поднять версии react, react-dom и @types/react
- устанвоить полифилл intersection-observer
- meta: TMRED-2411

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.0.0-beta.16",
     "debug": "^4.1.1",
+    "intersection-observer": "^0.5.1",
     "invariant": "^2.2.4",
     "inversify": "^5.0.1",
     "mobx": "^4.9.3",
@@ -47,8 +48,8 @@
     "mobx-utils": "^5.2.0",
     "next": "^7.0.2",
     "ramda": "^0.26.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "reflect-metadata": "^0.1.13",
     "semantic-ui-react": "^0.85.0",
     "ts-loader": "^5.3.3"
@@ -64,7 +65,7 @@
     "@types/invariant": "^2.2.29",
     "@types/jest": "^24.0.0",
     "@types/next": "^7.0.8",
-    "@types/react": "^16.8.2",
+    "@types/react": "^16.8.13",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^9.4.7",
