--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "axios": "^0.18.0",
     "class-transformer": "^0.2.0",
     "classnames": "^2.2.6",
-    "core-js": "^3.0.0-beta.16",
+    "core-js": "^3.0.1",
     "debug": "^4.1.1",
     "invariant": "^2.2.4",
     "inversify": "^5.0.1",
