--- a/package.json
+++ b/package.json
@@ -33,24 +33,24 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "class-transformer": "^0.2.0",
-    "classnames": "^2.2.6",
-    "core-js": "^3.0.1",
-    "debug": "^4.1.1",
-    "invariant": "^2.2.4",
-    "inversify": "^5.0.1",
-    "mobx": "^4.9.3",
-    "mobx-react": "^5.4.3",
-    "mobx-react-devtools": "^6.1.1",
-    "mobx-react-lite": "^1.2.0",
-    "mobx-utils": "^5.2.0",
-    "next": "^8.0.3",
-    "ramda": "^0.26.1",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "reflect-metadata": "^0.1.13",
-    "ts-loader": "^5.3.3"
+    "axios": "0.18.0",
+    "class-transformer": "0.2.0",
+    "classnames": "2.2.6",
+    "core-js": "3.0.1",
+    "debug": "4.1.1",
+    "invariant": "2.2.4",
+    "inversify": "5.0.1",
+    "mobx": "4.9.3",
+    "mobx-react": "5.4.3",
+    "mobx-react-devtools": "6.1.1",
+    "mobx-react-lite": "1.2.0",
+    "mobx-utils": "5.2.0",
+    "next": "8.0.3",
+    "ramda": "0.26.1",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
+    "reflect-metadata": "0.1.13",
+    "ts-loader": "5.3.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
