--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "template-app",
   "scripts": {
     "dev": "env NODE_ENV=development next",
-    "build": "next build",
-    "start": "next start",
+    "build": "env NODE_ENV=production next build",
+    "start": "env NODE_ENV=production next start",
     "analyze": "env NODE_ENV=production NODE_ANALYZE=1 next build",
     "lint": "(npm run lint:code & npm run lint:styles & wait)",
     "lint:code": "tslint --project ./tsconfig.json",
@@ -40,60 +40,60 @@
     "debug": "4.1.1",
     "invariant": "2.2.4",
     "inversify": "5.0.1",
-    "mobx": "4.9.3",
+    "mobx": "4.9.4",
     "mobx-react": "5.4.3",
     "mobx-react-devtools": "6.1.1",
     "mobx-react-lite": "1.2.0",
     "mobx-utils": "5.2.0",
-    "next": "8.0.3",
+    "next": "8.1.0",
     "ramda": "0.26.1",
-    "react": "16.8.5",
-    "react-dom": "16.8.5",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "reflect-metadata": "0.1.13",
     "ts-loader": "5.3.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.7",
-    "@types/debug": "0.0.31",
+    "@types/debug": "^4.1.4",
     "@types/enzyme": "^3.1.16",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/faker": "^4.1.5",
     "@types/invariant": "^2.2.29",
     "@types/jest": "^24.0.0",
-    "@types/next": "^7.0.8",
-    "@types/ramda": "^0.26.3",
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.3",
+    "@types/next": "^8.0.3",
+    "@types/ramda": "^0.26.6",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^9.5.1",
     "clean-css": "^4.2.1",
     "commitlint": "^7.5.0",
-    "cz-customizable": "^5.3.0",
+    "cz-customizable": "^6.0.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "faker": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^0.5.2",
+    "fork-ts-checker-webpack-plugin": "^1.0.2",
     "husky": "^1.3.1",
     "hygen": "^2.1.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.7.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.3",
     "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended": "^2.1.0",
-    "stylelint-config-standard": "^18.2.0",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.12.1",
+    "stylelint": "^10.0.1",
+    "stylelint-config-recommended": "^2.2.0",
+    "stylelint-config-standard": "^18.3.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "3.4.2",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "tslint-react": "^4.0.0",
+    "typescript": "3.4.3",
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "config": {
     "commitizen": {
