--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,12 @@ http {
     # при добавлении нового location добовляем его тут, указываем, в proxy_pass название сервиса из
     # compose файла.
 
+    #пример /api для микросервиса national-projects
+    #location /api {
+    #  proxy_set_header   Host np.preprod.itass.local;
+    #  proxy_pass         http://np.preprod.itass.local/api;
+    #}
+
     location / {
       proxy_connect_timeout   10;
       # app - название сервиса в docker-compose.
