--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:styles": "stylelint './**/*.@(less|css)'",
     "lint:staged": "lint-staged",
     "typecheck": "tsc --noEmit",
-    "test": "env JEST_REPORT_FILE='./coverage/test-report.json' jest",
+    "test": "jest",
     "test:w": "jest --watch",
     "test:c": "env JEST_REPORT_FILE='./coverage/test-report.json' node ./core/tests/runners/coverage.js",
     "swagger": "./core/build/genSwagger.sh"
