feat(package.json): packg up

--- a/package.json
+++ b/package.json
@@ -39,63 +39,62 @@
     "classnames": "2.2.6",
     "core-js": "3.0.1",
     "debug": "4.1.1",
-    "intersection-observer": "^0.5.1",
-    "jest-bamboo-reporter": "^1.2.1",
+    "intersection-observer": "0.6.0",
+    "jest-bamboo-reporter": "1.2.1",
     "invariant": "2.2.4",
     "inversify": "5.0.1",
     "mobx": "4.9.4",
     "mobx-react": "5.4.3",
     "mobx-react-devtools": "6.1.1",
-    "mobx-react-lite": "1.2.0",
-    "mobx-utils": "5.2.0",
+    "mobx-react-lite": "1.3.0",
+    "mobx-utils": "5.4.0",
     "next": "8.1.0",
     "ramda": "0.26.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "ts-loader": "5.3.3"
+    "ts-loader": "5.4.4"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.7",
-    "@types/debug": "^4.1.4",
-    "@types/enzyme": "^3.1.16",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/faker": "^4.1.5",
-    "@types/invariant": "^2.2.29",
-    "@types/jest": "^24.0.0",
-    "@types/next": "^8.0.3",
-    "@types/ramda": "^0.26.6",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
-    "autoprefixer": "^9.5.1",
-    "clean-css": "^4.2.1",
-    "commitlint": "^7.5.0",
-    "cz-customizable": "^6.0.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "faker": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.0.2",
-    "husky": "^1.3.1",
-    "hygen": "^2.1.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.7.1",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "lint-staged": "^8.1.3",
-    "opn": "^5.4.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "stylelint": "^10.0.1",
-    "stylelint-config-recommended": "^2.2.0",
-    "stylelint-config-standard": "^18.3.0",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.16.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "3.4.3",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "@types/classnames": "2.2.7",
+    "@types/debug": "4.1.4",
+    "@types/enzyme": "3.9.1",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/faker": "4.1.5",
+    "@types/invariant": "2.2.29",
+    "@types/jest": "24.0.12",
+    "@types/next": "8.0.4",
+    "@types/ramda": "0.26.8",
+    "@types/react": "16.8.15",
+    "@types/react-dom": "16.8.4",
+    "@zeit/next-css": "1.0.1",
+    "@zeit/next-typescript": "1.1.1",
+    "autoprefixer": "9.5.1",
+    "clean-css": "4.2.1",
+    "commitlint": "7.5.2",
+    "cz-customizable": "6.0.0",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
+    "faker": "4.1.0",
+    "fork-ts-checker-webpack-plugin": "1.2.0",
+    "husky": "2.1.0",
+    "hygen": "4.0.2",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "24.7.1",
+    "less": "3.9.0",
+    "less-loader": "5.0.0",
+    "lint-staged": "8.1.5",
+    "opn": "6.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "stylelint": "10.0.1",
+    "stylelint-config-recommended": "2.2.0",
+    "stylelint-config-standard": "18.3.0",
+    "ts-jest": "24.0.2",
+    "tslint": "5.16.0",
+    "tslint-config-airbnb": "5.11.1",
+    "tslint-eslint-rules": "5.4.0",
+    "tslint-react": "4.0.0",
+    "typescript": "3.4.5",
+    "webpack-bundle-analyzer": "3.3.2"
   },
   "config": {
     "commitizen": {
