feat(configs): change configs
- delete dns configs from docker-compose.yml
- add proxy_pass for unsplash api in nginx.conf
- meta: pagination

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,13 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile-dev
-    image: # тут нужно указать название проекта\репозитория (можно посмотреть в package.json)
+    image: practice-repo
     volumes:
       - "./:/app"
     ports:
       - "3000:3000"
     networks:
       - webnet
-    dns: 172.28.40.14 # Это актуально пока у нас проблемы с dns
     environment:
       - TERM=xterm-256color`
   nginx:
@@ -23,7 +22,6 @@ services:
       - "8080:8080"
     networks:
       - webnet
-    dns: 172.28.40.14 # Это актуально пока у нас проблемы с dns
     depends_on:
       - app
 networks:
