--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,11 @@ http {
     #  proxy_pass         http://np.preprod.itass.local/api;
     #}
 
+    location /api {
+      proxy_set_header   Host api.unsplash.com;
+      proxy_pass         https://api.unsplash.com/;
+    }
+
     location / {
       proxy_connect_timeout   10;
       # app - название сервиса в docker-compose.
